# gittest

./: CMakeLists.txt  README.md  main.cpp
APP_include/: AppTest1.h
APP_src/: AppTest1.cpp
_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Test_Cmake.sln  Test_Cmake.vcxproj  Test_Cmake.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
_build/.cmake/api/v1/reply/: cache-v2-3c2b60840f54ddcc5b37.json  codemodel-v2-66ecc5d0764feb108fec.json  index-2021-04-17T04-59-00-0531.json  target-Test_Cmake-Release-c7d7cdd2d3e68c0fdd7a.json
_build/Test_Cmake.dir/Release/Test_Cmake.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Test_Cmake.lastbuildstate
_build/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
_build/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
